--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
 <app-top-bar></app-top-bar>
 
 <div class="container">
-  <router-outlet></router-outlet>
+  <!-- <router-outlet></router-outlet> -->
+  <app-product-list></app-product-list>
 </div>
 
 <!-- 
