finished the getting start part.

--- a/src/styles.css
+++ b/src/styles.css
@@ -122,6 +122,10 @@
     margin: 0;
   }
   
+  /* Product List */
+  app-product-list {
+    padding: 10px;
+  }
   /* Checkout Cart, Shipping Prices */
   
   .cart-item, .shipping-item {
